# cellrake

./: LICENSE  README.md  pyproject.toml  setup.py
cellradar/: __init__.py  main.py  predicting.py  segmentation.py  training.py  utils.py
cellrake/: main.py  predicting.py  segmentation.py  training.py  utils.py
examples/: 1_training_models.ipynb  2. analyzing_images.ipynb  2_analyzing_images.ipynb  analysis_pipeline.ipynb  best_model_svm.pkl  example_notebook.ipynb  train_model.ipynb
examples/sample_data/: best_model_svm.pkl
examples/sample_data/cfos/: Thumbs.db
examples/sample_data/cfos_analysis/: counts.csv  counts.xlsx
examples/sample_data/cfos_analysis/rois_processed/: C3-34453_B1_10X_BLA_001.pkl  C3-34453_B1_10X_BLA_002.pkl  C3-34454_B2_10X_BLA_.pkl  C3-34454_B2_10X_BLA_001.pkl
examples/sample_data/cfos_analysis/rois_raw/: C3-34453_B1_10X_BLA_001.pkl  C3-34453_B1_10X_BLA_002.pkl  C3-34454_B2_10X_BLA_.pkl  C3-34454_B2_10X_BLA_001.pkl  C3-34454_B2_10X_BLA_002.pkl
examples/sample_data/colocalization_cfos_tdt/: colocalization_results.csv  colocalization_results.xlsx
examples/sample_data/tdt/: Thumbs.db
examples/sample_data/tdt_analysis/: counts.csv  counts.xlsx
examples/sample_data/tdt_analysis/rois_processed/: C2-34453_B1_10X_BLA_001.pkl  C2-34453_B1_10X_BLA_002.pkl  C2-34454_B2_10X_BLA_.pkl  C2-34454_B2_10X_BLA_001.pkl  C2-34454_B2_10X_BLA_002.pkl
examples/sample_data/tdt_analysis/rois_raw/: C2-34453_B1_10X_BLA_001.pkl  C2-34453_B1_10X_BLA_002.pkl  C2-34454_B2_10X_BLA_.pkl  C2-34454_B2_10X_BLA_001.pkl  C2-34454_B2_10X_BLA_002.pkl
examples/sample_data/tdt_model/: best_model_svm.pkl  evaluation_test.csv  evaluation_train.csv  features.csv
