[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellrake"
version = "0.1.1"
authors = [
  { name="Marc Canela", email="mcanela@researchmar.net" },
]
description = "A package for analyzing cells in fluorescent images"
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["image", "fluorescence", "cFos", "tdTomato", "immunohistochemistry", "count cells", "colocalization"]
dependencies = [
    "matplotlib>=3.3.0,<4.0.0",
    "pandas>=1.1.0,<2.0.0",
    "scikit-learn>=0.24.0,<1.0.0",
    "numpy>=1.19.0,<2.0.0",
    "Pillow>=8.0.0,<10.0.0",
    "scipy>=1.5.0,<2.0.0",
    "shapely>=1.7.0,<2.0.0",
    "scikit-image>=0.17.0,<1.0.0",
    "tqdm>=4.50.0,<5.0.0",
    "csbdeep>=0.6.0,<0.9.0",
    "stardist>=0.8.0,<0.10.0",
    "openpyxl>=3.0.0,<4.0.0",
    "tensorflow>=2.4.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0,<7.0.0",
    "black>=22.0.0,<23.0.0"
]

[project.urls]
Homepage = "https://github.com/marccanela/cellrake"