[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellrake"
version = "0.1.6"
authors = [
  { name="Marc Canela", email="mcanela@researchmar.net" },
]
description = "A package for analyzing cells in fluorescent images"
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["image", "fluorescence", "cFos", "tdTomato", "immunohistochemistry", "count cells", "colocalization"]
dependencies = [
    "pandas",
    "scikit-learn",
    "Pillow",
    "shapely",
    "tqdm",
    "stardist",
    "openpyxl",
    "tensorflow"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0,<7.0.0",
    "black>=22.0.0,<23.0.0"
]

[project.urls]
Homepage = "https://github.com/marccanela/cellrake"